# project1cmake

./: CMakeLists.txt  README.md
inc/: hello.cpp  hello.h
src/: main.cpp
